--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,5 +6,25 @@
 </head>
 <body>
 <div>Hello MVC World!</div>
+<table>
+    <thead>
+    <tr>
+        <th>Data</th>
+        <th>Temperatura</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+        <td>2024.03.12</td>
+        <td>6</td>
+    </tr>
+    </tbody>
+    <tbody>
+    <tr>
+        <td>2024.03.11</td>
+        <td>5</td>
+    </tr>
+    </tbody>
+</table>
 </body>
 </html>
